; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.dol.c_Dfix1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.dol.c_Dfix1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@noexec = common dso_local global i64 0, align 8
@ERR_NAME = common dso_local global i32 0, align 4
@ERR_AMBIG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @Dfix1(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca [2 x i32*], align 16
  %5 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i64, i64* @noexec, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %42

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 0
  store i32* %10, i32** %11, align 16
  %12 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 1
  store i32* null, i32** %12, align 8
  %13 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 0
  %14 = call i32** @Dfix2(i32** %13)
  store i32** %14, i32*** %5, align 8
  %15 = load i32**, i32*** %5, align 8
  %16 = getelementptr inbounds i32*, i32** %15, i64 0
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %24, label %19

19:                                               ; preds = %9
  %20 = load i32**, i32*** %5, align 8
  %21 = getelementptr inbounds i32*, i32** %20, i64 1
  %22 = load i32*, i32** %21, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %34

24:                                               ; preds = %19, %9
  %25 = load i32**, i32*** %5, align 8
  %26 = call i32 @blkfree(i32** %25)
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @short2str(i32* %27)
  %29 = call i32 @setname(i32 %28)
  %30 = load i32, i32* @ERR_NAME, align 4
  %31 = load i32, i32* @ERR_AMBIG, align 4
  %32 = or i32 %30, %31
  %33 = call i32 @stderror(i32 %32)
  br label %34

34:                                               ; preds = %24, %19
  %35 = load i32**, i32*** %5, align 8
  %36 = getelementptr inbounds i32*, i32** %35, i64 0
  %37 = load i32*, i32** %36, align 8
  %38 = call i32* @Strsave(i32* %37)
  store i32* %38, i32** %3, align 8
  %39 = load i32**, i32*** %5, align 8
  %40 = call i32 @blkfree(i32** %39)
  %41 = load i32*, i32** %3, align 8
  store i32* %41, i32** %2, align 8
  br label %42

42:                                               ; preds = %34, %8
  %43 = load i32*, i32** %2, align 8
  ret i32* %43
}

declare dso_local i32** @Dfix2(i32**) #1

declare dso_local i32 @blkfree(i32**) #1

declare dso_local i32 @setname(i32) #1

declare dso_local i32 @short2str(i32*) #1

declare dso_local i32 @stderror(i32) #1

declare dso_local i32* @Strsave(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
